--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@evolvingriley/file-upload",
-  "version": "0.1.4a-alpha.1",
+  "version": "0.1.4-alpha.1",
   "description": "file upload for digital.gov",
   "main": "index.js",
   "scripts": {
