--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,8 @@ dotenv = "0.15"
 once_cell = "1.17"
 lazy_static = "1.5.0"
 neon = "1"
+colored = "2.1.0"
+regex = "1.11.1"
+derive_more = { version = "1.0.0", features = ["display"] }
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "test-util"] }
