fix: add public-read ACL to S3 uploads and improve filename handling

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@evolvingriley/file-upload",
-  "version": "0.1.7-alpha",
+  "version": "0.1.8",
   "description": "file upload for digital.gov",
   "main": "index.js",
   "scripts": {
