--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,30 @@
 [package]
 name = "file_upload"
 version = "0.1.5"
+description = "A Neon library for uploading files"
+license = "MIT"
 edition = "2021"
+exclude = ["index.node"]
 
 [lib]
-name = "file_upload"
-crate-type = ["cdylib", "rlib"]
-
-[[bin]]
-name = "file_upload"
-path = "src/main.rs"
-required-features = ["binary"]
-
-[features]
-binary = ["tokio/full"]
+crate-type = ["cdylib"]
 
 [dependencies]
-tokio = { version = "1.0", features = ["rt-multi-thread"] }
-aws-config = "0.55.0"
-aws-sdk-s3 = "0.25.0"
-image = "0.24"
-mime_guess = "2.0"
-dotenv = "0.15"
-once_cell = "1.17"
-lazy_static = "1.5.0"
-neon = "1"
-colored = "2.1.0"
-regex = "1.11.1"
-derive_more = { version = "1.0.0", features = ["display"] }
-[dev-dependencies]
-tokio = { version = "1.0", features = ["full", "test-util"] }
+aws-config = "0.55.3"
+aws-sdk-s3 = "0.25.1"
+aws-types = "0.55.3"
+bytes = "1.0"
+chrono = "0.4.31"
+colored = "2.0.4"
+derive_more = { version = "1.0.0-beta.3", features = ["display"] }
+dotenv = "0.15.0"
+image = "0.24.7"
+lazy_static = "1.4.0"
+mime_guess = "2.0.4"
+neon = { version = "1.0.0", default-features = false, features = ["napi-6"] }
+once_cell = "1.18.0"
+regex = "1.10.2"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_yaml = "0.9.27"
+tokio = { version = "1.34.0", features = ["full"] }
+urlencoding = "2.1.3"
